== 0.2.0 

* 2 major enhacement
  * added the possibility to define two token in which final states of the first are internal states of the second
  * added the '[a-Z]' syntax to regular expression support

* 1 minor enhacement
  * spec loading fixed
  * added a simple REPL based on Ariteval

== 0.1.0 / 2007-06-09

* 1 major enhancement
  * Initial release with 100% coverage.