@@ -7,6 +7,7 @@
 * 1 minor enhacement
   * spec loading fixed
   * added a simple REPL based on Ariteval
+  * aliased :recursive with :iterative because it's more intuitive
 
 == 0.1.0 / 2007-06-09
 
